# ConvexHullPeeling

./: .gitignore  CMakeLists.txt  convexHull.cpp  convexHull.h  coordinate.cpp  coordinate.h  glImage.cpp  glImage.h  glPixel.cpp  glPixel.h  kMeans.cpp  kMeans.h  main.cpp
